# Volt

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  Agents.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REVIEW.md  ROADMAP.md  VISION.md  context.md  pyproject.toml  pytest.ini  requirements-dev.txt
benchmarks/: CMakeLists.txt  kernel_benchmarks.cpp
cad/: Cargo.toml  README.md
crates/volt-cli/: Cargo.toml
crates/volt-core/: Cargo.toml
crates/volt-librepcb/: Cargo.toml
eda/: AUTOPLACE_PLAN.md  CLEAN_ROOM.md  Cargo.toml  Progress.md
examples/: CMakeLists.txt  __init__.py  led_circuit.cpp  led_circuit.hpp
examples/pcb_led_board/: __init__.py  guide.html  main.py
examples/routed_regulator_led_board/: __init__.py  guide.html  main.py
examples/schematic_sugar/: __init__.py  compact_led.py  regulator_fragment.py  timer_555_led_blinker.py
examples/stm32_usb_buck/: __init__.py  board.py  connection_blocks.py  main.py  power_blocks.py  power_nets.py  project_tests.py  schematic_connectors.py  schematic_mcu.py  schematic_output.py  schematic_power.py  schematic_symbols.py  stm32_board.py  utility_blocks.py
examples/timer_555_led_blinker/: __init__.py  board.py  components.py  guide.html  main.py  project_tests.py  schematic.py
src/authoring/: CMakeLists.txt  component_library.cpp  connection_helpers.cpp  reference_designators.cpp
src/circuit/: CMakeLists.txt  bom.cpp  circuit.cpp  circuit_storage.hpp  connectivity_model.cpp  definitions.cpp  design_intent.cpp  design_intent_mutations.cpp  electrical_model.cpp  electrical_mutations.cpp  hierarchy.cpp  hierarchy_model.cpp  hierarchy_mutations.cpp  instances.cpp  net_class_resolution.cpp  net_classes.cpp  nets.cpp  part_definition.cpp  parts.cpp  queries.cpp  rule_classes.cpp  subsystem_storage.cpp  subsystem_storage_impl.hpp  validation.cpp
src/core/: CMakeLists.txt  content_hash.cpp  mutation_access.hpp  version.cpp
src/io/: CMakeLists.txt  board_capability_profile.cpp  board_capability_profile_io.hpp  bom_writer.cpp  detail_schematic_svg_common.cpp  detail_schematic_svg_elements.cpp  detail_schematic_svg_layers.cpp  detail_schematic_svg_page_chrome.cpp  logical_circuit_reader.cpp  logical_circuit_writer.cpp  logical_net_class_format.cpp  logical_net_class_format.hpp  part_definition_reader.cpp  part_definition_writer.cpp  pcb_feature_io.cpp  pcb_feature_io.hpp  pcb_feature_svg.cpp  pcb_reader.cpp  pcb_schema.cpp  pcb_svg_footprints.cpp  pcb_svg_layers.cpp  pcb_svg_writer.cpp  pcb_writer.cpp  pcb_writer_footprints.cpp  pcb_writer_rooms.cpp  schematic_reader.cpp  schematic_schema.cpp  schematic_svg_writer.cpp  schematic_writer.cpp
src/pcb/: CMakeLists.txt  board.cpp  board_capability.cpp  board_capability_validation.cpp  board_capability_validation.hpp  board_copper.cpp  board_copper_model.cpp  board_features.cpp  board_footprint_drc.cpp  board_footprint_drc.hpp  board_footprint_model.cpp  board_geometry.cpp  board_geometry_projection.cpp  board_layers.cpp  board_outline.cpp  board_placement_model.cpp  board_room_rules.cpp  board_room_rules.hpp  board_router.cpp  board_spatial_index.cpp  board_storage.hpp  board_structure_model.cpp  compiled_board.cpp  compiled_board_consumers.cpp  footprints.cpp
src/python/: CMakeLists.txt  binding_common.hpp  binding_component_conversions.hpp  binding_conversions.hpp  binding_diagnostic_conversions.hpp  binding_enum_conversions.hpp  binding_ids.hpp  binding_part_definition_conversions.hpp  binding_pcb_conversions.hpp  binding_property_conversions.hpp  binding_schematic_conversions.hpp  bindings.cpp  board_bindings.cpp  board_bindings.hpp  circuit_bindings.cpp  circuit_bindings.hpp  py_board.cpp  py_board.hpp  py_board_helpers.hpp  py_circuit.cpp  py_circuit.hpp  py_circuit_board.cpp  py_circuit_board_helpers.hpp  py_circuit_helpers.hpp  py_circuit_logical.cpp  py_circuit_logical_helpers.hpp  py_circuit_modules.cpp  py_circuit_py_helpers.hpp  py_circuit_reports.cpp  py_circuit_reports_helpers.hpp  py_circuit_schematic.cpp  py_circuit_schematic_helpers.hpp  py_fabrication.cpp  py_kicad.cpp  py_part_library.cpp  py_part_library.hpp  py_schematic.cpp  py_schematic.hpp  py_schematic_helpers.hpp  schematic_bindings.cpp  (+1 more)
src/schematic/: CMakeLists.txt  default_symbols.cpp  endpoint_authoring.cpp  geometry.cpp  layout.cpp  presentation_geometry.cpp  readability_bounds_validation.cpp  readability_collision_validation.cpp  readability_density_validation.cpp  readability_geometry.cpp  readability_label_validation.cpp  readability_validation.cpp  readability_validation_common.cpp  readability_wire_validation.cpp  readiness_validation.cpp  schematic.cpp  schematic_document.cpp  schematic_items_model.cpp  schematic_library_model.cpp  schematic_sheet_model.cpp  schematic_storage.hpp  symbols.cpp  wire_topology.cpp
tests/: CMakeLists.txt
tests/adapters/: kicad_boundary_test.cpp  kicad_loss_report_test.cpp  kicad_pcb_writer_test.cpp  kicad_schematic_writer_test.cpp
tests/architecture/: board_public_api.txt  boardrouter_public_api.txt  boardspatialindex_public_api.txt  circuit_connectivity_mutator_public_api.txt  circuit_electrical_mutator_public_api.txt  circuit_hierarchy_mutator_public_api.txt  circuit_intent_mutator_public_api.txt  circuit_net_class_mutator_public_api.txt  circuit_public_api.txt  circuit_public_types.txt  component_assembly_intent_public_api.txt  net_class_public_api.txt  refactor_inventory_baseline.json  schematic_public_api.txt
tests/authoring/: component_library_test.cpp  connection_helpers_test.cpp  reference_designators_test.cpp
tests/circuit/: authoring_test.cpp  bom_test.cpp  circuit_reads_test.cpp  circuit_test.cpp  circuit_updates_test.cpp  connectivity_model_test.cpp  construction_specs_test.cpp  definitions_test.cpp  design_intent_test.cpp  electrical_model_test.cpp  hierarchy_model_test.cpp  hierarchy_test.cpp  instances_test.cpp  led_circuit_test.cpp  net_classes_test.cpp  nets_test.cpp  part_definition_test.cpp  parts_test.cpp  queries_test.cpp  rule_classes_test.cpp  validation_test.cpp  (+2 more)
(+834 files in other folders)
