[workspace]
members = [
    "crates/volt-sexp",
    "crates/volt-core",
    "crates/volt-librepcb",
    "crates/volt-kicad",
    "crates/volt-erc",
    "crates/volt-drc",
    "crates/volt-export",
    "crates/volt-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/volt-eda/volt-eda"

[workspace.dependencies]
volt-sexp = { path = "crates/volt-sexp" }
volt-core = { path = "crates/volt-core" }
volt-librepcb = { path = "crates/volt-librepcb" }
volt-kicad = { path = "crates/volt-kicad" }
volt-erc = { path = "crates/volt-erc" }
volt-drc = { path = "crates/volt-drc" }
volt-export = { path = "crates/volt-export" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
