[workspace]
members = ["crates/volt-cad-core", "crates/volt-cad-freecad", "crates/volt-cad-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/volt-eda/volt-eda"

[workspace.dependencies]
volt-cad-core = { path = "crates/volt-cad-core" }
volt-cad-freecad = { path = "crates/volt-cad-freecad" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Newer tempfile pulls getrandom 0.4.x whose manifest requires Cargo edition2024 support.
tempfile = "=3.10.1"
