[workspace]
members = [
    "crates/volt-core",
    "crates/volt-import",
    "crates/volt-erc",
    "crates/volt-drc",
    "crates/volt-export",
    "crates/volt-refill",
    "crates/volt-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/volt-eda/volt-eda"

[workspace.dependencies]
volt-core = { path = "crates/volt-core" }
volt-import = { path = "crates/volt-import" }
volt-erc = { path = "crates/volt-erc" }
volt-drc = { path = "crates/volt-drc" }
volt-export = { path = "crates/volt-export" }

volt-refill = { path = "crates/volt-refill" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
