add_executable(volt_led_circuit_example led_circuit.cpp)
target_link_libraries(volt_led_circuit_example PRIVATE Volt::Authoring)
target_compile_features(volt_led_circuit_example PRIVATE cxx_std_20)
target_include_directories(volt_led_circuit_example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
volt_apply_project_warnings(volt_led_circuit_example PRIVATE)
volt_apply_clang_tidy(volt_led_circuit_example)
volt_apply_sanitizers(volt_led_circuit_example)
volt_apply_coverage(volt_led_circuit_example)

if(VOLT_BUILD_TESTS)
    add_test(NAME volt_led_circuit_example COMMAND volt_led_circuit_example)
    set_tests_properties(volt_led_circuit_example PROPERTIES LABELS "cpp;example;coverage")
endif()
